--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -7,14 +7,14 @@
                             {"positionid", Model.PositionId.ToString()},
                             {"previouspagedetails", "../SearchType" },
                             {"previouspagesimilar", "../SearchType" },
-                            { "id",  Model.Id.ToString()},
-                            { "level",  Model.Level.ToString()},
+                            { "id",  Model.Id},
+                            { "level",  Model.Level},
 
                            };
     var paramdataprevious = new Dictionary<string, string>
                            {
-                              { "id",  Model.Id.ToString()},
-                              { "level",  Model.Level.ToString()},
+                              { "id",  Model.Id},
+                              { "level",  Model.Level},
                               {"positionid", Model.PositionId.ToString()}
                             };
 }
