--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -6,8 +6,8 @@
     var routedataprevious = new Dictionary<string, string>
 {
         {"positionid",Model.PositionId.ToString()},
-        {"id", Model.Id.ToString() },
-        {"level", Model.Level.ToString() },
+        {"id", Model.Id},
+        {"level", Model.Level},
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
