--- a/Web/Pages/Candidate/Shoreside/Compare/AllObjective.cshtml
+++ b/Web/Pages/Candidate/Shoreside/Compare/AllObjective.cshtml
@@ -33,7 +33,7 @@
                           { "positionid",  Model.PositionId.ToString()},
                            {"previouspagecompare", "../../Candidate/Shoreside/Compare/AllObjective" },
                            {"previouspage", Model.PreviousPage},
-                          { "id",  jobgroup.Id.ToString()}
+                          { "idobj",  jobgroup.Id.ToString()}
                          };
                         <a asp-page="../../../CCGMember/Compare/ObjectiveLevel" asp-all-route-data="routedata">
                             <div class="col-sm-4 mrgn-bttm-md">
